<resources>
    <string name="app_name">QuizGsheet</string>
    <string name="_120_mg_day"><![CDATA[> 120 mg/day]]></string>
    <string name="_40_mg_day">40 mg/day</string>
    <string name="no">No</string>
    <string name="_120_mg_day2">120 mg /day</string>
    <string name="q_8_if_yes_what_dosing_you_prefer_most">Q.8 If yes, what dosing you prefer most?</string>
    <string name="yes">Yes</string>
    <string name="q_7_do_you_use_ginkgo_biloba_for_tinnitus">Q.7 Do you use Ginkgo biloba for Tinnitus?</string>
    <string name="none_of_above">None of above</string>
    <string name="all">All</string>
    <string name="mactotal_capsule_ntinnitus_feedback_form">MACTOTAL CAPSULE TINNITUS FEEDBACK FORM</string>
    <string name="q_1_how_many_patients_of_tinnitus_you_see_per_month">Q.1 How many patients of Tinnitus you see per month?</string>
    <string name="_39_18_years">39-18 Years</string>
    <string name="minieres_disease">Minieres disease</string>
    <string name="behaviorial_therapy">Behaviorial therapy</string>
    <string name="antianxiety">Antianxiety</string>
    <string name="multivitamins">Multivitamins</string>
    <string name="antioxidants1">Antioxidants</string>
    <string name="vasodilators">Vasodilators</string>
    <string name="yes1">Yes</string>
    <string name="q_9_have_you_ever_prescribed_mactotal_capsule">Q.9 Have you ever prescribed Mactotal capsule?</string>
    <string name="no1">No</string>
    <string name="ototoxicity">Ototoxicity</string>
    <string name="q_10_if_yes_for_which_ingredient_you_prescribe_mactotal_capsule_most">Q.10 If yes, for which ingredient you prescribe Mactotal capsule most?</string>
    <string name="adjuvant_therapy">Adjuvant therapy</string>
    <string name="string_adjuvant_therapy" />
    <string name="primary">Primary</string>
    <string name="vitamins">Vitamins</string>
    <string name="q_5_do_you_use_drug_therapy_as_primary_therapy_or_adjuvant_therapy_in_tinnitus">Q. 5 Do you use drug therapy as primary therapy or adjuvant therapy in Tinnitus?</string>
    <string name="ginkgo_biloba">Ginkgo biloba</string>
    <string name="minerals">Minerals</string>
    <string name="q_4_what_is_your_1st_line_therapy_for_tinnitus">Q.4 What is your 1st line therapy for Tinnitus?</string>
    <string name="sound_therapies">Sound therapies</string>
    <string name="drug_therapy">Drug therapy</string>
    <string name="ear_infections">Ear infections</string>
    <string name="hearing_aids">Hearing aids</string>
    <string name="depression_and_anxiety">Depression and Anxiety</string>
    <string name="hearing_loss">Hearing loss</string>
    <string name="q_3what_is_the_most_common_etiology_primary_cause_of_tinnitus">Q.3What is the most common etiology/ primary cause of Tinnitus?</string>
    <string name="hyperacusis">Hyperacusis</string>
    <string name="_17_12_years">17-12 Years</string>
    <string name="_12_years"><![CDATA[<12 Years]]></string>
    <string name="_59_40_years">59-40 Years</string>
    <string name="_60years">60Years</string>
    <string name="q_2_what_is_the_normal_age_group_of_patients_suffering_from_tinnitus">Q.2 What is the normal age group of patients suffering from Tinnitus?</string>
    <string name="_9_5">9-5</string>
    <string name="acoustic_trauma">Acoustic trauma</string>
    <string name="other">Other</string>
    <string name="_20"><![CDATA[>20]]></string>
    <string name="antioxidants">Antioxidants</string>
    <string name="q_6_which_drug_therapy_you_prefer_most_in_tinnitus">Q.6 Which drug therapy you prefer most in Tinnitus?</string>
    <string name="occupational_hazards">Occupational hazards</string>
    <string name="na">NA</string>
    <string name="all_of_above">All of above</string>
    <string name="antidepressants">Antidepressants</string>
    <string name="_5"><![CDATA[<5]]></string>
    <string name="_19_10">19-10</string>
    <string name="adjuvant_therapy2">adjuvant_therapy2</string>
    <string name="btnsubmit">btnSubmit</string>
    <string name="tv_username">TextView</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="mactotal">Mactotal Survey</string>
    <string name="welcome_to_survey">Welcome TO Survey</string>
    <string name="osmf_rebagen_survey">OSMF-REBAGEN Survey</string>
    <string name="montemac_fx_survey">Montemac-Fx Survey</string>
    <string name="osmf_rebagen">OSMF-REBAGEN</string>
    <string name="_10_20">10-20</string>
    <string name="no_osmf">No</string>
    <string name="_14_21_days">14-21 days</string>
    <string name="_8_10_days">8-10 days</string>
    <string name="q_1_how_many_no_patients_you_diagnose_in_a_month_suffering_from_osmf_oral_submucousal_fibrosis">Q.1) How many no patients you diagnose in a month, suffering from OSMF (Oral Submucousal fibrosis)?</string>
    <string name="what_is_your_speciality">What is your Speciality ?</string>
    <string name="_0_10">0-10</string>
    <string name="submit_osmf">Submit</string>
</resources>
