<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/mactotal_capsule_ntinnitus_feedback_form"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:paddingTop="20dp"
            android:text="@string/q_1_how_many_patients_of_tinnitus_you_see_per_month"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_q1">

            <RadioButton
                android:id="@+id/opt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_20" />

            <RadioButton
                android:id="@+id/opt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_19_10" />

            <RadioButton
                android:id="@+id/opt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_9_5" />

            <RadioButton
                android:id="@+id/opt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_5" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView_q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group1"
            android:paddingTop="20dp"
            android:text="@string/q_2_what_is_the_normal_age_group_of_patients_suffering_from_tinnitus"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_q2">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_60years" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_59_40_years" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_39_18_years" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_17_12_years" />

            <RadioButton

                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/_12_years" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView_q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group2"
            android:paddingTop="20dp"
            android:text="@string/q_3what_is_the_most_common_etiology_primary_cause_of_tinnitus"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_q3">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/occupational_hazards" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hearing_loss" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hyperacusis" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/depression_and_anxiety" />

            <RadioButton

                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/minieres_disease" />

            <RadioButton

                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/acoustic_trauma" />

            <RadioButton

                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/ototoxicity" />

            <RadioButton

                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/ear_infections" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView_q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group3"
            android:paddingTop="20dp"
            android:text="@string/q_4_what_is_your_1st_line_therapy_for_tinnitus"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio_group4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_q4">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hearing_aids" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sound_therapies" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/behaviorial_therapy" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/drug_therapy" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/other" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView_q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group4"
            android:paddingTop="20dp"
            android:text="@string/q_5_do_you_use_drug_therapy_as_primary_therapy_or_adjuvant_therapy_in_tinnitus"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio_group5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_q5">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/primary" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/adjuvant_therapy2" />


        </RadioGroup>

        <TextView
            android:id="@+id/textView_q6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group5"
            android:paddingTop="20dp"
            android:text="@string/q_6_which_drug_therapy_you_prefer_most_in_tinnitus"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio_group6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_q6">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/antidepressants" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/antianxiety" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/vasodilators" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/antioxidants" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/multivitamins" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/all" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/none_of_above" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView_q7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group6"
            android:paddingTop="20dp"
            android:text="@string/q_7_do_you_use_ginkgo_biloba_for_tinnitus"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio_group7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_q7">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/no" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView_q8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group7"
            android:paddingTop="20dp"
            android:text="@string/q_8_if_yes_what_dosing_you_prefer_most"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio_group8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_q8">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_120_mg_day2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_40_mg_day" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_120_mg_day" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView_q9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group8"
            android:paddingTop="20dp"
            android:text="@string/q_9_have_you_ever_prescribed_mactotal_capsule"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio_group9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_q9">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/no" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView_q10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group9"
            android:paddingTop="20dp"
            android:text="@string/q_10_if_yes_for_which_ingredient_you_prescribe_mactotal_capsule_most"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio_group10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_q10">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ginkgo_biloba" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/vitamins" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/minerals" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/antioxidants" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/all_of_above" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/na" />

        </RadioGroup>


        <Button
            android:id="@+id/btn_quiz1"
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group10"
            android:text="submit"
            android:textAlignment="center" />



    </RelativeLayout>


</ScrollView>